<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/trending1"
            android:contentDescription="@string/plant_image"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin"
        app:layout_constraintBottom_toTopOf="@id/view_separator"
        app:layout_constraintStart_toEndOf="@id/card_view"
        style="@style/SubtitleTextStyle"
        android:text="@string/item_plant_name"/>

    <TextView
        android:id="@+id/plant_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/plant_name"
        app:layout_constraintStart_toStartOf="@id/plant_name"
        style="@style/DefaultTextStyle"
        android:text="@string/item_plant_description"/>

    <ImageView
        android:id="@+id/star_imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_empty_star"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/star_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>