<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/default_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_card_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_plant_name"
        app:layout_constraintStart_toEndOf="@id/detail_card_view"
        app:layout_constraintBottom_toBottomOf="@id/detail_card_view"
        app:layout_constraintTop_toTopOf="@id/detail_card_view"
        style="@style/TitleTextStyle"
        android:layout_marginLeft="@dimen/default_margin"/>

    <ImageView
        android:id="@+id/close_imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/detail_card_view"/>

    <TextView
        android:id="@+id/plant_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_page_plant_description"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/detail_card_view"/>

    <TextView
        android:id="@+id/description_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_page_plant_description_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_description"/>

    <TextView
        android:id="@+id/plant_growing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_page_plant_growing"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/description_type"/>

    <TextView
        android:id="@+id/growing_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_page_plant_growing_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_growing"/>


    <TextView
        android:id="@+id/plant_consumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_page_plant_consumption"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/growing_type"/>

    <TextView
        android:id="@+id/consumption_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_page_plant_consumption_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_consumption"/>
    
    <View
        android:id="@+id/view_separator"
        android:layout_width="1dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/consumption_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_delete"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toTopOf="@id/view_separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_separator"/>

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_full_star"
        app:layout_constraintStart_toEndOf="@id/view_separator"
        app:layout_constraintBottom_toBottomOf="@id/delete_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>